# pos-project

./: .gitignore  .gitmodules  :wq  CMakeLists.txt  POS.hpp  README.md  ]  bridge.cpp  debugging.cpp  gateway.cpp  logic.cpp  main.py  mise.toml  requirements.txt  standalone_GUI_testing.py  vcpkg.json
.cache/clangd/index/: gateway.cpp.E28E2D6A1A711DD9.idx  logic.cpp.57FAD4526D9E50CD.idx
src/: main.py
src/cpp/: Ingredient_database.cpp  POS.hpp  bridge.cpp  database.hpp  db.cpp  db.hpp  db_insert.cpp  db_select.cpp  inventory.txt  login.cpp  login.hpp  login_pass_hash.hpp  main.cpp
src/python/: main.py  pos_backend.cp314-win_amd64.pyd  pos_logic.py  window.py
